// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders multi route 1`] = `
<DocumentFragment>
  <div
    class="css-vurnku"
  >
    <div
      class="Column__AutoColumn-sc-1kykgp9-2 bXKOWF"
    >
      <div
        class="sc-bdnxRM Row-sc-nrd8cx-0 Row__AutoRow-sc-nrd8cx-3 fmeAVV drkpWa fRMqhK"
        width="auto"
      >
        <div
          class="Badge-sc-1mhw5si-0 gayll"
        >
          75
        </div>
        <div
          class="theme__TextWrapper-sc-18nh1jk-0 isUuLU css-1kt4f20"
        >
          USDC
        </div>
        <svg
          class="RoutingDiagram__StyledChevronRight-sc-o1ook0-0"
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="9 18 15 12 9 6"
          />
        </svg>
        <div
          class="sc-bdnxRM Row-sc-nrd8cx-0 Row__AutoRow-sc-nrd8cx-3 fmeAVV drkpWa fRMqhK"
          width="auto"
        >
          <div
            class="Badge-sc-1mhw5si-0 gayll"
          >
            <div
              class="sc-bdnxRM Row-sc-nrd8cx-0 Row__AutoRow-sc-nrd8cx-3 fmeAVV drkpWa fRMqhK"
              width="auto"
            >
              <div
                class="DoubleLogo__Wrapper-sc-skatqk-0 diDXho"
              >
                <img
                  alt="USDC logo"
                  class="CurrencyLogo__StyledLogo-sc-1fvnadz-1 bzseWM DoubleLogo__HigherLogo-sc-skatqk-1 djPAFc"
                  src="https://raw.githubusercontent.com/uniswap/assets/master/blockchains/ethereum/assets/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48/logo.png"
                />
                <img
                  alt="DAI logo"
                  class="CurrencyLogo__StyledLogo-sc-1fvnadz-1 bzseWM DoubleLogo__CoveredLogo-sc-skatqk-2 jqDGQg"
                  sizeraw="16"
                  src="https://raw.githubusercontent.com/uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
                />
              </div>
              500
            </div>
          </div>
          <svg
            class="RoutingDiagram__StyledChevronRight-sc-o1ook0-0"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="9 18 15 12 9 6"
            />
          </svg>
        </div>
        <div
          class="theme__TextWrapper-sc-18nh1jk-0 isUuLU css-1kt4f20"
        >
          DAI
        </div>
      </div>
    </div>
    <div
      class="Column__AutoColumn-sc-1kykgp9-2 bXKOWF"
    >
      <div
        class="sc-bdnxRM Row-sc-nrd8cx-0 Row__AutoRow-sc-nrd8cx-3 fmeAVV drkpWa fRMqhK"
        width="auto"
      >
        <div
          class="Badge-sc-1mhw5si-0 gayll"
        >
          25
        </div>
        <div
          class="theme__TextWrapper-sc-18nh1jk-0 isUuLU css-1kt4f20"
        >
          USDC
        </div>
        <svg
          class="RoutingDiagram__StyledChevronRight-sc-o1ook0-0"
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="9 18 15 12 9 6"
          />
        </svg>
        <div
          class="sc-bdnxRM Row-sc-nrd8cx-0 Row__AutoRow-sc-nrd8cx-3 fmeAVV drkpWa fRMqhK"
          width="auto"
        >
          <div
            class="Badge-sc-1mhw5si-0 gayll"
          >
            <div
              class="sc-bdnxRM Row-sc-nrd8cx-0 Row__AutoRow-sc-nrd8cx-3 fmeAVV drkpWa fRMqhK"
              width="auto"
            >
              <div
                class="DoubleLogo__Wrapper-sc-skatqk-0 diDXho"
              >
                <img
                  alt="USDC logo"
                  class="CurrencyLogo__StyledLogo-sc-1fvnadz-1 bzseWM DoubleLogo__HigherLogo-sc-skatqk-1 djPAFc"
                  src="https://raw.githubusercontent.com/uniswap/assets/master/blockchains/ethereum/assets/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48/logo.png"
                />
                <img
                  alt="MKR logo"
                  class="CurrencyLogo__StyledLogo-sc-1fvnadz-1 bzseWM DoubleLogo__CoveredLogo-sc-skatqk-2 jqDGQg"
                  sizeraw="16"
                  src="https://raw.githubusercontent.com/uniswap/assets/master/blockchains/ethereum/assets/0x9f8F72aA9304c8B593d555F12eF6589cC3A579A2/logo.png"
                />
              </div>
              3000
            </div>
          </div>
          <svg
            class="RoutingDiagram__StyledChevronRight-sc-o1ook0-0"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="9 18 15 12 9 6"
            />
          </svg>
        </div>
        <div
          class="sc-bdnxRM Row-sc-nrd8cx-0 Row__AutoRow-sc-nrd8cx-3 fmeAVV drkpWa fRMqhK"
          width="auto"
        >
          <div
            class="Badge-sc-1mhw5si-0 gayll"
          >
            <div
              class="sc-bdnxRM Row-sc-nrd8cx-0 Row__AutoRow-sc-nrd8cx-3 fmeAVV drkpWa fRMqhK"
              width="auto"
            >
              <div
                class="DoubleLogo__Wrapper-sc-skatqk-0 diDXho"
              >
                <img
                  alt="MKR logo"
                  class="CurrencyLogo__StyledLogo-sc-1fvnadz-1 bzseWM DoubleLogo__HigherLogo-sc-skatqk-1 djPAFc"
                  src="https://raw.githubusercontent.com/uniswap/assets/master/blockchains/ethereum/assets/0x9f8F72aA9304c8B593d555F12eF6589cC3A579A2/logo.png"
                />
                <img
                  alt="DAI logo"
                  class="CurrencyLogo__StyledLogo-sc-1fvnadz-1 bzseWM DoubleLogo__CoveredLogo-sc-skatqk-2 jqDGQg"
                  sizeraw="16"
                  src="https://raw.githubusercontent.com/uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
                />
              </div>
              10000
            </div>
          </div>
          <svg
            class="RoutingDiagram__StyledChevronRight-sc-o1ook0-0"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="9 18 15 12 9 6"
            />
          </svg>
        </div>
        <div
          class="theme__TextWrapper-sc-18nh1jk-0 isUuLU css-1kt4f20"
        >
          DAI
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders single route 1`] = `
<DocumentFragment>
  <div
    class="css-vurnku"
  >
    <div
      class="Column__AutoColumn-sc-1kykgp9-2 bXKOWF"
    >
      <div
        class="sc-bdnxRM Row-sc-nrd8cx-0 Row__AutoRow-sc-nrd8cx-3 fmeAVV drkpWa fRMqhK"
        width="auto"
      >
        <div
          class="Badge-sc-1mhw5si-0 gayll"
        >
          100
        </div>
        <div
          class="theme__TextWrapper-sc-18nh1jk-0 isUuLU css-1kt4f20"
        >
          USDC
        </div>
        <svg
          class="RoutingDiagram__StyledChevronRight-sc-o1ook0-0"
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="9 18 15 12 9 6"
          />
        </svg>
        <div
          class="sc-bdnxRM Row-sc-nrd8cx-0 Row__AutoRow-sc-nrd8cx-3 fmeAVV drkpWa fRMqhK"
          width="auto"
        >
          <div
            class="Badge-sc-1mhw5si-0 gayll"
          >
            <div
              class="sc-bdnxRM Row-sc-nrd8cx-0 Row__AutoRow-sc-nrd8cx-3 fmeAVV drkpWa fRMqhK"
              width="auto"
            >
              <div
                class="DoubleLogo__Wrapper-sc-skatqk-0 diDXho"
              >
                <img
                  alt="USDC logo"
                  class="CurrencyLogo__StyledLogo-sc-1fvnadz-1 bzseWM DoubleLogo__HigherLogo-sc-skatqk-1 djPAFc"
                  src="https://raw.githubusercontent.com/uniswap/assets/master/blockchains/ethereum/assets/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48/logo.png"
                />
                <img
                  alt="DAI logo"
                  class="CurrencyLogo__StyledLogo-sc-1fvnadz-1 bzseWM DoubleLogo__CoveredLogo-sc-skatqk-2 jqDGQg"
                  sizeraw="16"
                  src="https://raw.githubusercontent.com/uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
                />
              </div>
              500
            </div>
          </div>
          <svg
            class="RoutingDiagram__StyledChevronRight-sc-o1ook0-0"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="9 18 15 12 9 6"
            />
          </svg>
        </div>
        <div
          class="theme__TextWrapper-sc-18nh1jk-0 isUuLU css-1kt4f20"
        >
          DAI
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders when no routes are provided 1`] = `
<DocumentFragment>
  <div
    class="css-vurnku"
  />
</DocumentFragment>
`;
